--- a/Documents/niche-group/apps/wine/vercel.json
+++ b/Documents/niche-group/apps/wine/vercel.json
@@ -13,6 +13,10 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_VERCEL_ENV": "production"
+    "NEXT_PUBLIC_VERCEL_ENV": "production",
+    "NEXT_PUBLIC_SUPABASE_URL": "https://llyzfowuzjhlerhtypzm.supabase.co",
+    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "your_supabase_anon_key_here",
+    "SUPABASE_SERVICE_KEY": "your_supabase_service_key_here",
+    "DATABASE_URL": "postgresql://postgres.llyzfowuzjhlerhtypzm:N1ch3T3staejt@aws-0-us-east-1.pooler.supabase.com:6543/postgres"
   }
 } 
