Update wine app for reliable Vercel deployment

--- a/Documents/niche-group/apps/wine/package.json
+++ b/Documents/niche-group/apps/wine/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --port 3002",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
+    "vercel-build": "cd ../.. && turbo run build --filter=wine",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit",
