--- a/Documents/niche-group/apps/wine/.vercelignore
+++ b/Documents/niche-group/apps/wine/.vercelignore
@@ -1,3 +1,12 @@
-.git
-node_modules
-.next 
+# Ignore everything at the root level
+/.*
+/*.json
+/*.md
+/*.yaml
+/node_modules
+/packages
+/apps/docs
+/apps/web
+
+# Exclude the wine app directory itself
+!/apps/wine 
